Pruebas de cargue de git

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-.vs/*
-WebApiProduccion.Data/obj/*
-WebApiProduccion.Entities/obj/*
-WebApiProduccion/obj/*
+.vs/
+WebApiProduccion.Data/obj/
+WebApiProduccion.Entities/obj/
+WebApiProduccion/obj/
 WebApiProduccion/WebApiProduccion.csproj.user
-WebApiProduccion.Data/bin/*
-WebApiProduccion.Entities/bin/*
-WebApiProduccion/bin/*
+WebApiProduccion.Data/bin/
+WebApiProduccion.Entities/bin/
+WebApiProduccion/bin/
+WebApiProduccion.Data/bin/Debug/
+WebApiProduccion.Entities/Debug/
+*.dll
+*.pdb
+*.exe
